--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -70,7 +70,7 @@ In expanding on this work, we want to not only find crashes, but also investigat
 \section{Method}
 We do not expect our process to be terribly difficult to implement. Our main challenge is designing a way to wrap the system/library calls of interest. We need to be able to intercept calls in a way that is invisible and non-disruptive to the application being tested. To solve this problem, Miller et al. extracted the binary of the call of interest (in their case \texttt{malloc}) and used a binary rewriter to rename \texttt{malloc} to \texttt{\_malloc}. They then wrote a new function called \texttt{malloc} which was called by the applications being tested. This new version returned an error value with some probability or just passed the call along to \texttt{\_malloc}. We have come up with a similar solution that has a lower startup cost.
 
-Linux systems have a built in environment variable named \texttt{LD\_PRELOAD} which allows users to load a shared library before starting an application. Most importantly, these preloaded libraries take precedence over any other libraries loaded by the application. Therefore if this preloaded library contains a function named, for example, \texttt{open}, any calls to \texttt{open} by the application will invoke the preloaded \texttt{open} and not the version found in the system library(?). This allows us to intercept any call and return an error message with some probability. In order to call the real version of \texttt{open}, the \texttt{dlsym} function is used. This function searches through dynamically loaded libraries and returns a function handle to a function whose name is given as a argument. This handle can then be used to call the original version of \texttt{open}. The code used to wrap \texttt{open} is given in code listing 1. This code is compiled into a position independent shared library file to be used with \texttt{LD\_PRELOAD}. This implementation is based on a tutorial found at \cite{preload}.
+Linux systems have a built in environment variable named \texttt{LD\_PRELOAD} which allows users to load a shared library before starting an application. Most importantly, these preloaded libraries take precedence over any other libraries loaded by the application. Therefore if this preloaded library contains a function named, for example, \texttt{open}, any calls to \texttt{open} by the application will invoke the preloaded \texttt{open} and not the version found in the system library. This allows us to intercept any call and return an error message with some probability. In order to call the real version of \texttt{open}, the \texttt{dlsym} function is used. This function searches through dynamically loaded libraries and returns a function handle to a function whose name is given as a argument. This handle can then be used to call the original version of \texttt{open}. The code used to wrap \texttt{open} is given in code listing 1. This code is compiled into a position independent shared library file to be used with \texttt{LD\_PRELOAD}. This implementation is based on a tutorial found at \cite{preload}.
 
 There are some uncertainties that arise when using \texttt{LD\_PRELOAD}. Firstly, if a function from another library calls \texttt{open} it may bypass our wrapped version. Similarly, if the library containing \texttt{open} (\texttt{stdio}) is statically linked to a program, the original version may be called. We are currently investigating ways to handle these problems, and we feel that we can design an implementation using \texttt{LD\_PRELOAD} that is robust to these situations. If not, we will use a method similar to the one found in Miller et al.
 \pagebreak
@@ -98,7 +98,7 @@ ssize_t open(const char *pathname, int flags) {
 \section{A Small Example}
 As a proof of concept, we used a wrapped call to \texttt{open} on a handful of common Unix utilities: \texttt{grep}, \texttt{gcc}, and \texttt{cat}. Our call to \texttt{open} set \texttt{errno} to \texttt{EACCES}, which indicates that permission to the file is denied. Interestingly, \texttt{grep} does not make any calls to \texttt{open}. A brief overview of the source code reveals that it calls \texttt{fopen} and \texttt{fts\_open} instead. Furthermore, within the \texttt{fopen} source code, calls to \texttt{open} have a different function signature from our wrapper and therefore bypassed it. We will have to be cognizant of this overloading in the future.
 
-We found that \texttt{gcc} and \texttt{cat} were more straightforward. We found that \texttt{gcc} made 70 calls to \texttt{open} when compiling a simple one source file C program. When we returned errors probabilistically, we found robust handling of errors in a variety of locations. In some situations when a header file could not be opened, we received the error message "(Permission denied) Bug not reproducible." This suggests that \texttt{gcc} reattempts to compile the source file at least once. This is an example of a behavior that we will need to further investigate. Finally, \texttt{cat} displayed the simplest behavior: it either executed successfully or terminated and reported "Permission denied."
+We found that \texttt{gcc} and \texttt{cat} were more straightforward. We found that \texttt{gcc} made 70 calls to \texttt{open} when compiling a simple one source file C program. When we returned errors probabilistically, we found robust handling of errors in a variety of locations. In some situations when a header file could not be opened, we received the error message ``(Permission denied) Bug not reproducible." This suggests that \texttt{gcc} reattempts to compile the source file at least once. This is an example of a behavior that we will need to further investigate. Finally, \texttt{cat} displayed the simplest behavior: it either executed successfully or terminated and reported ``Permission denied."
 
 %open call on some command line apps
 
@@ -144,10 +144,10 @@ Week 9 (12/12 - 12/18): Revise paper, work on poster\\
 
 \begin{thebibliography}{9}
 	\bibitem{bart}
-	B.P. Miller, D. Koski, C.P. Lee, V. Maganty, R. Murthy, A. Natarajan, and J. Steidl, "Fuzz Revisited: A Re-examination of the Reliability of UNIX Utilities and Services", \textit{Computer Sciences Technical Report \#1268}, University of Wisconsin-Madison, April 1995.
+	B.P. Miller, D. Koski, C.P. Lee, V. Maganty, R. Murthy, A. Natarajan, and J. Steidl, ``Fuzz Revisited: A Re-examination of the Reliability of UNIX Utilities and Services", \textit{Computer Sciences Technical Report \#1268}, University of Wisconsin-Madison, April 1995.
 	
 	\bibitem{preload}
-	S. Barghi, "How to wrap a system call (libc function) in Linux", September 2014.\\
+	S. Barghi, ``How to wrap a system call (libc function) in Linux", September 2014.\\
 	\texttt{http://samanbarghi.com/blog/2014/09/05/how-to-wrap-a-system-call-libc-function-in-linux/}
 \end{thebibliography}
 \end{document}
