--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -10,7 +10,7 @@
 \definecolor{mauve}{rgb}{0.58,0,0.82}
 
 \lstset{frame=tb,
-	language=C,
+	%language=C,
 	aboveskip=3mm,
 	belowskip=3mm,
 	showstringspaces=false,
@@ -75,11 +75,9 @@ Linux systems have a built in environment variable named \texttt{LD\_PRELOAD} wh
 There are some uncertainties that arise when using \texttt{LD\_PRELOAD}. Firstly, if a function from another library calls \texttt{open} it may bypass our wrapped version. Similarly, if the library containing the method of interest is statically linked to a program, the original version may be called. We are currently investigating ways to handle these problems, and we feel that we can design an implementation using \texttt{LD\_PRELOAD} that is robust to these situations. If not, we will use a method similar to the one found in Miller et al. Another issue is that the \texttt{LD\_PRELOAD} method may not apply to other operating systems.
 
 \subsection{Auto-Generating Wrappers}
-Due to the large number of calls we are interested in testing, it is in our best interest to automate the process of generating ``wrapper'' files as quickly and easily as possible. One possible technique for doing this is to traverse the AST of e.g. header files, and dynamically generate the \texttt{.c} code for each method signature of interest.
+Due to the large number of calls we are interested in testing, it is in our best interest to automate the process of generating ``wrapper'' files as quickly and easily as possible. One possible technique for doing this is to traverse the abstract syntax tree (AST) of the header files, and dynamically generate C code for each method signature of interest. Listing 2 shows a trivial example for the \texttt{open} call (we used the \texttt{pycparser} Python module for parsing the AST \cite{pycparser}). However, it may be the case that this approach only covers some subset of the calls to be tested, and manual work is still required. Issues such as variadic functions and custom \texttt{typedef}s in the method signature will have to be dealt with. However, this preliminary work suggests that this technique may have potential to significantly reduce the amount of manual work required.
 
-Listing 2 shows a trivial example for the \texttt{open} call (we used the \texttt{pycparser} Python module for parsing the AST \cite{pycparser}). However, it may be the case that this approach only covers some subset of the calls to be tested, and manual work is still required. Issues such as variadic functions and custom \texttt{typedef}s in the method signature will have to be dealt with. However, this preliminary work suggests that this technique may have potential to significantly reduce the amount of manual work required.
-
-\begin{lstlisting}[caption=\texttt{open} wrapper]
+\begin{lstlisting}[caption=\texttt{open} wrapper, language=C]
 #define _GNU_SOURCE	//needed to compile as PIC
 #include <dlfcn.h>	//dlsym
 #include <stdio.h>
@@ -90,11 +88,11 @@ static ssize_t (*real_open) (const char *pathname, int flags) = NULL;
 //open wrapper
 ssize_t open(const char *pathname, int flags) {
 	printf("wrapped read\n");					//do something before calling real open
-	real_open = dlsym(RTLD_NEXT, "open"); 	//get https://github.com/eliben/pycparseraddr of real opean
+	real_open = dlsym(RTLD_NEXT, "open"); 	//get addr of real opean
 	real_open(pathnae, flags);					//call real open
 }
 \end{lstlisting}
-\begin{lstlisting}[caption=\texttt{gen\_open\_wrapper.py}  generates code identical to Listing 1]
+\begin{lstlisting}[caption=\texttt{gen\_open\_wrapper.py}  Generates code identical to Listing 1, language=Python]
 from pycparser import c_parser, c_generator
 
 # example method signature
