--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -5,6 +5,7 @@
 \usepackage{listings}
 \usepackage{color}
 \usepackage{graphics}
+\usepackage{hyperref}
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
 \definecolor{mauve}{rgb}{0.58,0,0.82}
@@ -76,6 +77,9 @@ Another limitation to our method is that it is Linux specific. \texttt{LD\_PRELO
 \section{Related Work}
 
 \section{Conclusion}
+
+\section{Crashes}
+\input{crashes}
 
 \section*{Appendix}
 
