move citations into .bib file

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -86,32 +86,7 @@ Another limitation to our method is that it is Linux specific. \texttt{LD\_PRELO
 
 \section*{Appendix}
 
-\begin{thebibliography}{9}
-	\bibitem{coreutils}
-	http://www.gnu.org/software/coreutils/coreutils.html
-	
-	\bibitem{nettools}
-	https://wiki.linuxfoundation.org/networking/net-tools
-	
-	\bibitem{bsd}
-	https://www.freebsd.org/cgi/man.cgi?query=ld.so\&sektion=8\&apropos=0\&manpath=Red+Hat+Linux\%2Fi386+9
-	
-	\bibitem{dll}
-	https://support.microsoft.com/en-us/kb/197571
-	
-	\bibitem{macos}
-	https://developer.apple.com/legacy/library/documentation/Darwin/Reference/ManPages/man1/dyld.1.html
-	
-	\bibitem{bart}
-	B.P. Miller, D. Koski, C.P. Lee, V. Maganty, R. Murthy, A. Natarajan, and J. Steidl, ``Fuzz Revisited: A Re-examination of the Reliability of UNIX Utilities and Services", \textit{Computer Sciences Technical Report \#1268}, University of Wisconsin-Madison, April 1995.
-	
-	\bibitem{preload}
-	S. Barghi, ``How to wrap a system call (libc function) in Linux", September 2014.\\
-	\texttt{http://samanbarghi.com/blog/2014/09/05/how-to-wrap-a-system-call-libc-function-in-linux/}
-	
-	\bibitem{pycparser}
-	Bendersky, E. ``pycparser: C parser and AST generator written in Python'', 2011.\\
-	\texttt{https://github.com/eliben/pycparser}
-\end{thebibliography}
+\bibliographystyle{unsrt}
+\bibliography{citations}
 
 \end{document}
