separate coreutils and nettools

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -44,7 +44,11 @@
 
 \input{codegen}
 
-\section{coreutils}
+\section{Coreutils}
+\input{coreutils}
+
+\section{\texttt{net-tools}}
+\input{nettools}
 
 \section{Large-scale Programs}
 \input{largescale}
@@ -53,9 +57,6 @@
 \input{anecdotes}
 
 \section{Conclusion}
-
-\section{Crashes}
-\input{crashes}
 
 \section*{Appendix}
 
